--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -17,6 +17,12 @@
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./ASSETS/CSS/style.css">
+  <style>
+    
+   #services{
+    background-color: rgba(8, 204, 218, 0.308);
+   }
+   </style>
 </head>
 
 <body>
