--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 <section>
         <div class="container">
             <div class="faq-section">
-              <h2 class="text-center mb-lg-5 mb-3 text-light">Frequently Asked Questions</h2>
+              <h2 class="text-center mb-lg-5 mb-3 text-dark"><strong>Frequently Asked Questions</h2></strong>
               <div class="accordion" id="faqAccordion">
                 <div class="accordion-item faq-item">
                   <h2 class="accordion-header">
